1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (REVISION): Bump.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Include stdio.h, stdarg.h, and math.h.

1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Include ctype.h.

1998-11-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Include errno.h.

1998-11-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Only define gettimeofday if Cygwin is before B20.

1998-10-21  Marcus G. Daniels  <mgd@sangre.santafe.edu>

	* dropdir.c (dropdir): Return NULL if passed as an argument.

1998-10-10  Marcus G. Daniels  <mgd@sangre.santafe.edu>

	* Makefile.am (CURRENT,AGE): Increment. Swarm 1.3.1 released.

	* Makefile.am (SRC): Add dropdir.c.

	* misc.h (dropdir): Declare.

	* dropdir.c: New file.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* find_executable.c (find_executable): Cast program name to char *
	to avoid warning on systems that have realpath program argument
	non-const.

1998-10-01  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* misc.h: Include <swarmconfig.h> instead of "swarmconfig.h".

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* misc.h (XFREE): Add.

	* realpath.c (realpath): MAXPATHLEN includes the null.
	Thanks to Kim Shrier.

1998-08-19  Marcus G. Daniels  <mgd@helen.santafe.edu>
	
	* misc.h: Include sys/types.h and sys/stat.h.

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* misc.h, getopt.c, getopt1.c, argp-fmtstream.c, argp-help.c,
	argp-parse.c, argp-pvh.c, argp-xinl.c, argp-fs-xinl.c, argp-fmtstream.h:
	Include swarmconfig.h instead of config.h.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* argp.h: Only define program_invocation_name and
	program_invocation_short_name in the absence of glibc.

	* argp-parse.c (argp_default_parser): Cast arg as (char *) for