@@ -1,3 +1,8 @@
+1999-01-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* getopt.c, misc.h, realpath.c: Use __CYGWIN__ instead of
+	__CYGWIN32__.
+
 1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* Makefile.am (REVISION): Bump.
